# ECE-522-GroupProject

AVL_Tree/: Cargo.toml
AVL_Tree/benches/: avl_bench.rs
AVL_Tree/src/: lib.rs  main.rs  tests.rs
RB_Tree/: Cargo.toml
RB_Tree/benches/: rb_bench.rs
RB_Tree/src/: lib.rs  main.rs  tests.rs
arborium_cli/: Cargo.toml  arborium_tree_avl.txt  avl_tree2.txt
arborium_cli/sample_trees/: avl_tree copy.txt  avl_tree.txt  rb_sample.txt  rb_tree.txt
arborium_cli/src/: main.rs
binary_lib/: Cargo.toml
binary_lib/src/: lib.rs
tree_cli/: Cargo.toml  ya.txt  ya2.txt
tree_cli/sample_trees/: avl_tree.txt  rb_tree copy.txt  rb_tree.txt
tree_cli/src/: main.rs
