[package]
name = "avl_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "avl_tree"
path = "src/lib.rs"

[dependencies]
binary_lib = {path = "../binary_lib"}
colored = "2.0.4"
criterion = "*"

[[bench]]
name = "avl_bench"
harness = false

